homelab-v8/apps/nginx-hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
  namespace: default
spec:
  selector:
    app: nginx-hello
  ports:
    - port: 80
      targetPort: 80
