homelab-v8/apps/nginx-hello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-hello
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: hello.wguilherme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-hello
                port:
                  number: 80
